--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,3 +31,5 @@ jobs:
       - run: bun run build
 
       - run: npm publish --access public --provenance
+        env:
+          NODE_AUTH_TOKEN: ""
