--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "claude-code"
   ],
   "author": "PND",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/swen128/cc-transcript"
